# pydigi

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  TESTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_support.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
doc/: DIGI-RS232-PROTOCOL.md  README.md
examples/: continuous_reading.py  offline_demo.py  single_reading.py
pydigi/: __init__.py  cli.py  config.py  exceptions.py  protocol.py  reading.py  scale.py  transport.py  version.py  watch.py
pydigi/models/: __init__.py  base.py  ds781.py  registry.py
scripts/: docker-build.sh  hil_record.py
tests/: conftest.py  framelib.py  test_cli.py  test_crossplatform.py  test_models.py  test_protocol.py  test_reading.py  test_scale.py  test_tare.py  test_transport.py  test_watch.py
tests/hil/: cases.yaml  hilkit.py  test_hil_ds781.py  test_replay_dumps.py
tests/hil/dumps/: README.md
tests/hil/dumps/ds781/: EXAMPLE-synthetic.json  N01-overload.json  N02-negative-net.json  N03-motion-unstable.json  N04-no-plu.json  P01-empty-pan.json  P02-ref-small.json  P03-ref-medium.json  P04-ref-large.json  P05-tare-container.json  P06-pricing.json  P07-continuous-ramp.json
