[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydigi"
dynamic = ["version"]
description = "Read weight, price and status from DIGI scales over RS-232."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Pavel Kim", email = "hello@pavelkim.com" }]
keywords = ["digi", "scale", "rs232", "serial", "weight", "ds-781", "measuring", "pos", "point-of-sale"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = ["pyserial>=3.0,<4"]

[project.optional-dependencies]
# PyYAML must be >=6: the 5.x sdist (5.4.1) fails to build against modern
# Cython/setuptools ('cython_sources' AttributeError), which broke CI on every
# interpreter without a prebuilt 5.4.1 wheel (3.10+, macOS, Windows). 6.0.x has
# wheels for all supported Pythons and builds cleanly.
test = ["pytest>=7.0,<10", "PyYAML>=6,<7"]
hil = ["PyYAML>=6,<7"]

[project.urls]
Homepage = "https://github.com/for-digi/pydigi"
Repository = "https://github.com/for-digi/pydigi"
Issues = "https://github.com/for-digi/pydigi/issues"

[project.scripts]
pydigi = "pydigi.cli:main"

[tool.setuptools.packages.find]
include = ["pydigi", "pydigi.*"]

[tool.setuptools.dynamic]
version = { attr = "pydigi.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
